# python-pandas-sample

./: README.md  matplotlib-named-colors.ipynb  numpy-pilot.ipynb  pandas-ist256.ipynb  pandas-stocks.ipynb  pandas-titanic3.ipynb  perf-report.ipynb  pyproject.toml  quandl-pilot.ipynb  save-stock-info.py
data/: AAPL.csv  AAPL.xls  GOOG.xls  MSFT.csv  MSFT.xls
python-for-data-analysis/: 06_01_txt.ipynb  09 Plotting and Visualization.md  09_01_matplotlib.ipynb  09_02_pandas-and-seaborn.ipynb  14_01_bitly_usagov.ipynb  6.1.3-csv.txt  book.md
