[tool.poetry]
name = "pandas-sample"
version = "0.1.0"
description = "Pandas Learning"
authors = ["twotwo <twotwo.li@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.19.5"
pandas = "^1.1.0"
xlrd = "^1.2.0"
xlwt = "^1.3.0"
quandl = "^3.5.0"
matplotlib = "^3.5.0"
pandas-datareader = "^0.8.1"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
flake8 = "^3.8.2"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
